Enabled addition of differing types.